# wechatpy

./: .appveyor.yml  .bumpversion.cfg  .coveragerc  .env  .gitignore  .gitmodules  .hound.yml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  dev-requirements.txt  mypy.ini  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py  tox-win.ini  tox.ini
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  Release.yml  codeql-analysis.yml  github.py
docs/: Makefile  changelog.rst  client.rst  component.rst  conf.py  events.rst  index.rst  install.rst  make.bat  messages.rst  oauth.rst  pay.rst  quickstart.rst  replies.rst  requirements.txt  sponsor.rst
docs/client/: card.rst  cloud.rst  customservice.rst  datacube.rst  device.rst  group.rst  index.rst  invoice.rst  jsapi.rst  marketing.rst  material.rst  media.rst  menu.rst  merchant.rst  message.rst  misc.rst  poi.rst  qrcode.rst  scan.rst  semantic.rst  shakearound.rst  tag.rst  template.rst  user.rst  wifi.rst  wxa.rst
docs/enterprise/: client.rst  quickstart.rst
docs/work/: client.rst  quickstart.rst
examples/async-client/: app.py  requirements.txt
examples/asyncio-client/: app.py  requirements.txt
examples/bae-echo-enterprise/: app.conf  index.py  requirements.txt  wechatapp.py
examples/echo/: app.py
examples/echo-encrypted/: app.py  requirements.txt
examples/echo-encrypted/templates/: index.html
examples/echo-enterprise/: Procfile  app.py  requirements.txt
examples/echo-enterprise/templates/: index.html
examples/echo/templates/: index.html
examples/wxjs/: manage.py  requirements.txt
examples/wxjs/main/: urls.py  views.py
examples/wxjs/wxjs/: settings.py  urls.py  wsgi.py
stubs/: requests_pkcs12.pyi  xmltodict.pyi
tests/: _compat.py  conftest.py  skip_conditions.py  test_asyncio_async_client.py  test_client.py  test_component_api.py  test_constants.py  test_create_reply.py  test_crypto.py  test_dataclasses.py  test_deserialize_reply.py  test_donw_bill_file_v3.py  test_enterprise_client.py  test_enterprise_create_reply.py  test_enterprise_parser.py  test_events.py  test_external_contact.py  test_external_contact_groupchat.py  test_fields.py  test_iot.py  test_messages.py  test_oauth.py  test_parser.py  test_pay.py  test_pay_v3.py  test_payment.py  test_replies.py  test_send_messages.py  test_session.py  test_tornado_async_client.py  test_utils.py  test_work_client.py  test_work_create_reply.py  test_work_parser.py
tests/certs/: apiclient_cert.pem  apiclient_key.pem  rsa_private_key.pem  rsa_public_key.pem
tests/fixtures/: bizwifi_device_add.json  bizwifi_device_delete.json  bizwifi_device_list.json  bizwifi_homepage_get.json  bizwifi_homepage_set.json  bizwifi_qrcode_get.json  bizwifi_shop_get.json  bizwifi_shop_list.json  bizwifi_statistics_list.json  callback_check.json  changeopenid.json  customservice_getkflist.json  customservice_getonlinekflist.json  customservice_getrecord.json  customservice_kfsession_getsession.json  customservice_kfsession_getsessionlist.json  customservice_kfsession_getwaitcase.json  datacube_getarticlesummary.json  datacube_getarticletotal.json  datacube_getinterfacesummary.json  datacube_getinterfacesummaryhour.json  datacube_getupstreammsg.json  datacube_getupstreammsgdistweek.json  datacube_getupstreammsghour.json  datacube_getupstreammsgmonth.json  datacube_getupstreammsgweek.json  datacube_getusercumulate.json  datacube_getuserread.json  datacube_getuserreadhour.json  datacube_getusershare.json  datacube_getusersharehour.json  datacube_getusersummary.json  get_current_autoreply_info.json  get_current_selfmenu_info.json  groups_create.json  groups_delete.json  groups_get.json  groups_getid.json  material_get_materialcount.json  media_uploadimg.json  (+33 more)
tests/fixtures/component/: _sns_oauth2_component_refresh_token.json  _sns_userinfo.json  _wxa_gettemplatedraftlist.json  api_authorizer_token.json  api_component_token.json  api_create_preauthcode.json  api_get_authorizer_info.json  api_get_authorizer_option.json  api_get_wxa_template_list.json  api_query_auth.json
tests/fixtures/enterprise/: batch_getresult.json  batch_inviteuser.json  chat_send.json  department_create.json  department_update.json  externalcontact_add_contact_way.json  externalcontact_add_corp_tag.json  externalcontact_add_msg_template.json  externalcontact_del_contact_way.json  externalcontact_edit_corp_tag.json  externalcontact_get.json  tag_get.json  (+17 more)
wechatpy/: __init__.py  _compat.py  client.py  component.py  constants.py  crypto.py  events.py  exceptions.py  fields.py  messages.py  oauth.py  parser.py  replies.py  schemes.py  utils.py
wechatpy/client/: __init__.py  async.py  base.py
wechatpy/crypto/: __init__.py  base.py  cryptography.py  pkcs7.py  pycrypto.py
wechatpy/enterprise/: __init__.py  client.py  crypto.py  events.py  exceptions.py  messages.py  parser.py  replies.py
wechatpy/iot/: __init__.py
wechatpy/oauth/: __init__.py
wechatpy/pay/: __init__.py  base.py  micropay.py  utils.py
wechatpy/payscore/: README.md  __init__.py  base.py  utils.py
wechatpy/session/: __init__.py  memcachedstorage.py  memorystorage.py  redisstorage.py  shovestorage.py
wechatpy/work/: __init__.py  crypto.py  events.py  exceptions.py  messages.py  parser.py  replies.py
(+197 files in other folders)
